
* SOLR-15771: bin/auth creates reasonable roles and permissions for security: 'search', 'index', 'admin', and 'superadmin' and assigns user superadmin role. (Eric Pugh, janhoy)

* SOLR-15367: Convert "rid" functionality into a default Tracer (Alex Deparvu, David Smiley)

Improvements
---------------------
* SOLR-16490: `/admin/cores?action=backupcore` now has a v2 equivalent, available at
  `GET /api/cores/coreName/backups` (Sanjay Dutt via Jason Gerlowski)

* SOLR-16883: Postlogs tool for indexing Solr logs in Solr now supported on Windows by converting it to a Solr CLI command: `bin/solr postlogs`.   `bin/postlogs` script marked deprected.  (Eric Pugh, Will White)

* SOLR-16847: v2 APIs are now able to access any applicable solrconfig.xml "requestHandler" configuration. (Alex Deparvu via Jason Gerlowski)

* SOLR-11685: When SolrCloud shard leaders change while indexing updates arrive, Solr could fail and return
  a HTTP 503 status. Switched to 510 so that CloudSolrClient will auto-retry it and probably succeed.
  (David Smiley, Alex Deparvu)

* SOLR-16490: The semi-internal `/admin/cores?action=restorecore` API now has a v2 equivalent, available at
  `POST /api/cores/coreName/restore {...}` (Sayanti Dey via Jason Gerlowski)

* SOLR-14667: Make zkClientTimeout consistent and based on a system property. The default values are stored in a single place referenced everywhere and they are based on system properties (Alex Deparvu)

* SOLR-16926: The embedded Zookeeper's bind host can now be overridden, but still defaults to "127.0.0.1".
  This is useful when using the ZkCli on a remote Solr using the embedded ZK, or Solr running in a Docker container.
  The SOLR_ZK_EMBEDDED_HOST envVar or -Dsolr.zk.embedded.host sysProp control this bind address. (Houston Putman)

* SOLR-16825: Solr now offers `SolrRequest` implementations for a subset of its v2 APIs.  These implementations